change custom cards

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Banner -->
-<section class="container-banner">
+<section class="container-banner mb-3">
   <img ngSrc="{{imgMobileHeader}}" alt="Logo" class="img-fluid" height="788" width="1298">
 </section>
 
