--- a/src/app/share/components/card-categoria/card-categoria.component.html
+++ b/src/app/share/components/card-categoria/card-categoria.component.html
@@ -1,54 +1,67 @@
-<div class="row row-cols-3 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/img/Llanta.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Llantas</h5>
-        <p class="card-text">Ver todo</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/img/Llanta.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Llantas</h5>
-        <p class="card-text">Ver todo</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/img/Llanta.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Llantas</h5>
-        <p class="card-text">Ver todo</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="assets/img/Llanta.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Llantas</h5>
-        <p class="card-text">Ver todo</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- * Carrusel para el componente home-->
+<!-- Carrusel -->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/Llanta.png" class="d-block w-100" alt="...">
+      <div class="row row-cols-3 row-cols-md-3 g-4">
+        <div class="col">
+          <article>
+            <img src="assets/img/Llanta.png" class="img-fluid" alt="">
+            <div class="header-c">
+              <h6 class="card-title">Nombre</h6>
+              <a class="card-text">Ver todo</a>
+            </div>
+          </article>
+        </div>
+        <div class="col">
+          <article>
+            <img src="assets/img/Llanta.png" class="img-fluid" alt="">
+            <div class="header-c">
+              <h6 class="card-title">Nombre</h6>
+              <a class="card-text">Ver todo</a>
+            </div>
+          </article>
+        </div>
+        <div class="col">
+          <article>
+            <img src="assets/img/Llanta.png" class="img-fluid" alt="">
+            <div class="header-c">
+              <h6 class="card-title">Nombre</h6>
+              <a class="card-text">Ver todo</a>
+            </div>
+          </article>
+        </div>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/Llanta.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/img/Llanta.png" class="d-block w-100" alt="...">
+      <div class="row row-cols-3 row-cols-md-3 g-4">
+        <div class="col">
+          <article>
+            <img src="assets/img/Llanta.png" class="img-fluid" alt="">
+            <div class="header-c">
+              <h6 class="card-title">Nombre</h6>
+              <a class="card-text">Ver todo</a>
+            </div>
+          </article>
+        </div>
+        <div class="col">
+          <article>
+            <img src="assets/img/Llanta.png" class="img-fluid" alt="">
+            <div class="header-c">
+              <h6 class="card-title">Nombre</h6>
+              <a class="card-text">Ver todo</a>
+            </div>
+          </article>
+        </div>
+        <div class="col">
+          <article>
+            <img src="assets/img/Llanta.png" class="img-fluid" alt="">
+            <div class="header-c">
+              <h6 class="card-title">Nombre</h6>
+              <a class="card-text">Ver todo</a>
+            </div>
+          </article>
+        </div>
+      </div>
     </div>
   </div>
 </div>
